# web-capture-bot

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: capture.rs  handlers.rs  main.rs
